--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,8 @@ dependencies {
     implementation 'com.journeyapps:zxing-android-embedded:3.6.0'
     implementation 'org.jetbrains:annotations-java5:15.0'
     implementation 'com.tencent.mm.opensdk:wechat-sdk-android-with-mta:+'
+    implementation 'com.github.dueeeke.dkplayer:dkplayer-java:2.5.5'
+    implementation 'com.github.dueeeke.dkplayer:dkplayer-armv7a:2.5.5'
+    implementation 'com.github.dueeeke.dkplayer:dkplayer-ui:2.5.5'
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
 }
