--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,15 @@ dependencies {
     implementation 'com.github.dueeeke.dkplayer:ijk-armv7a:3.0.2'
     implementation 'com.github.dueeeke.dkplayer:dkplayer-ui:3.0.2'
     implementation 'com.github.bumptech.glide:glide:3.7.0'
+
+    def room_version = "2.2.0-alpha02"
+    def lifecycle_version = "2.2.0-alpha03"
+
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
+
+    // Lifecycle components
+    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
+    annotationProcessor "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
+// For Kotlin use kapt instead of annotationProcessor
 }
