--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,21 +2,31 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.a13162.activitytest">
+
     <!-- To access Google+ APIs: -->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.NFC" />
+    <!-- 锁屏点亮屏幕 -->
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
 
     <uses-feature
         android:name="android.hardware.nfc"
         android:required="true" />
 
     <application
+        tools:replace="android:appComponentFactory"
         android:allowBackup="true"
         android:icon="@drawable/touchez"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <service
+            android:name=".service.NotifyService"
+            android:enabled="true"
+            android:exported="true"></service>
+
         <activity
             android:name=".CustomCaptureActivity"
             android:label="自定义扫描界面"
@@ -34,16 +44,19 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:launchMode="singleTop"
             android:configChanges="orientation|screenSize|keyboardHidden"
+            android:launchMode="singleTop"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
             <intent-filter>
                 <action android:name="android.nfc.action.NDEF_DISCOVERED" />
+
                 <category android:name="android.intent.category.DEFAULT" />
+
                 <data android:mimeType="*/*" />
             </intent-filter>
         </activity>
@@ -51,8 +64,9 @@
             android:name="com.journeyapps.barcodescanner.CaptureActivity"
             android:screenOrientation="portrait"
             tools:replace="screenOrientation" />
-        <activity android:name=".TagPageActivity"
-            android:launchMode="singleTop"/>
+        <activity
+            android:name=".TagPageActivity"
+            android:launchMode="singleTop" />
     </application>
 
 </manifest>
