--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -21,3 +21,8 @@ jobs:
       run: chmod +x ./gradlew
     - name: Build with Gradle
       run: ./gradlew build
+    - name: Upload APK
+      uses: actions/upload-artifact@v1
+      with:
+        name: app
+        path: app/build/outputs/apk/debug/touchez.apk
