--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -20,9 +20,11 @@ jobs:
     - name: Make gradlew executable
       run: chmod +x ./gradlew
     - name: Build with Gradle
-      run: ./gradlew build
+      run: ./gradlew assembleDebug
+    - name: Print Build Dict
+      run: ls app/build/outputs/apk
     - name: Upload APK
       uses: actions/upload-artifact@v1
       with:
         name: app
-        path: app/build/outputs/apk/debug/touchez.apk
+        path: app/build/outputs/apk/app-debug.apk
