--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -26,6 +26,14 @@ jobs:
 #       with:
 #         name: app
 #         path: app/build/outputs/apk/debug/app-debug.apk
+    - name: Signature
+      uses: r0adkll/sign-android-release@v1
+      with:
+        releaseDirectory: app/build/outputs/apk/release
+        signingKeyBase64: ${{ secrets.SIGNING_KEY }}
+        alias: ${{ secrets.ALIAS }}
+        keyStorePassword: ${{ secrets.KEY_STORE_PASSWORD }}
+        keyPassword: ${{ secrets.KEY_PASSWORD }}
     - name: Create Release
       id: create_release
       uses: actions/create-release@v1
