--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -19,17 +19,14 @@ jobs:
         java-version: 1.8
     - name: Make gradlew executable
       run: chmod +x ./gradlew
-    - name: Build with Gradle
-      run: ./gradlew assembleDebug
-#     - name: Upload APK
-#       uses: actions/upload-artifact@v1
-#       with:
-#         name: app
-#         path: app/build/outputs/apk/debug/app-debug.apk
+    - name: Build Project with Gradle
+      run: ./gradlew build
+    - name: Build Release APK with Gradle
+      run: ./gradlew assembleRelease
     - name: Signature
       uses: r0adkll/sign-android-release@v1
       with:
-        releaseDirectory: app/build/outputs/apk/debug
+        releaseDirectory: app/build/outputs/apk/release/
         signingKeyBase64: ${{ secrets.SIGNING_KEY }}
         alias: ${{ secrets.ALIAS }}
         keyStorePassword: ${{ secrets.KEY_STORE_PASSWORD }}
@@ -51,6 +48,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
-        asset_path: app/build/outputs/apk/debug/app-debug.apk
-        asset_name: app-debug.apk
+        asset_path: ${{ steps.sign-android-app.outputs.signedReleaseFile }}
+        asset_name: touchez.apk
         asset_content_type: application/vnd.android.package-archive
