--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -24,6 +24,7 @@ jobs:
     - name: Build Release APK with Gradle
       run: ./gradlew assembleRelease
     - name: Signature
+      id: sign-android-app
       uses: r0adkll/sign-android-release@v1
       with:
         releaseDirectory: app/build/outputs/apk/release/
@@ -52,6 +53,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
-        asset_path: ${{ steps.sign-android-release.outputs.signedReleaseFile }}
+        asset_path: ${{ steps.sign-android-app.outputs.signedReleaseFile }}
         asset_name: touchez.apk
         asset_content_type: application/vnd.android.package-archive
